adding key word abbreviation used in properties

--- a/sample-properties.properties
+++ b/sample-properties.properties
@@ -1,3 +1,12 @@
+#
+# Abbreviation for key word used
+#
+# TTS -> Text To Speech
+# STT -> Speech To Text
+# VR -> Visual Recognition
+# 
+#
+
 TTS_uname = xxxxxxx
 TTS_pass = xxxxxxx
 			
