--- a/sample-properties.properties
+++ b/sample-properties.properties
@@ -1,14 +1,5 @@
-#
-# Abbreviation for key word used
-#
-# TTS -> Text To Speech
-# STT -> Speech To Text
-# VR -> Visual Recognition
-# 
-#
-
-TTS_uname = xxxxxxx
-TTS_pass = xxxxxxx
+TTS_uname = xxxxxx
+TTS_pass = xxxxxx
 			
 			
 #			/*TTS_name, TTS_gender, TTS_language can be one of the following set
@@ -92,16 +83,15 @@ TTS_name =  en-US_AllisonVoice
 #			/*
 #			 * Speech To Text cred
 #			 */
-STT_uname = xxxxxxx
-STT_pass = xxxxxxx
+STT_uname = xxxxx
+STT_pass = xxxxx
 			
 #			/*
 #			 * Visual Recognition details
 #			 */
-vr_APIKey = xxxxxxx
+vr_APIKey = xxxxx
 tmp_image_dir_path = /tmp/Watson
 vr_classifier_name = testClassifier
-vr_classifier_uri = https://gateway-a.watsonplatform.net/visual-recognition/api/v3/classifiers
 
 #default value will be VisualRecognition.VERSION_DATE_2016_05_20 
 vr_version = 2016-05-20
@@ -126,17 +116,17 @@ camera_height = 240
 # Cloudant NOSql cred
 #
 #
-cloudant_uname=xxxxxxx
-cloudant_pass=xxxxxxx
-cloudant_url=xxxxxxx
+cloudant_uname=xxxxx
+cloudant_pass=xxxxx
+cloudant_url=https://xxxxxx:xxxx-bluemix.cloudant.com
 cloudant_dbName=scavengerimagesdb
 
 
 #
 #
-iot_Organization_ID=xxxxxxx
-iot_device_type=xxxxxxx
-iot_device_id=xxxxxxx
-iot_Authentication_Token=xxxxxxx
-iot_Authentication_Method=xxxxxxx
+iot_Organization_ID=xxxx
+iot_device_type=xxxx
+iot_device_id=xxxx
+iot_Authentication_Token=xxxx
+iot_Authentication_Method=token
 iot_event_for_img_base64=capture_store
