--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,41 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-antrun-plugin</artifactId>
+   <version>1.7</version>
+   <executions>
+       <execution>
+           <id>default-cli</id>
+           <phase>install</phase>
+           <goals>
+           		<goal>run</goal>
+           </goals>
+           <configuration>
+           <target name="-post-jar">
+			    <echo>${basedir}${file.separator}target${file.separator}*.jar</echo> 
+			    <jar destfile="${basedir}${file.separator}target${file.separator}scavenger_common.jar">
+			        <zipgroupfileset dir="${basedir}${file.separator}target${file.separator}" includes="*.jar"/>
+			        <manifest>
+			            <attribute name="Main-Class" value="com.ibm.watson.scavenger.LaunchApp"/>
+			        </manifest>
+			    </jar>
+			</target>
+               <!-->tasks>
+                   <ant target="myTarget" inheritRefs="true">
+                       <zip destfile=${project.basedir}/target/combined-with-dependencies.jar>
+    						<zipgroupfileset dir="target/" includes="*.jar"/>
+    						<manifest>
+							    <attribute name="Main-Class" value="com.ibm.watson.scavenger.LaunchApp" />
+							  </manifest>
+						</zip>
+                   </ant>
+               </tasks-->
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
   </plugins>
   </build>
 </project>
