Image processing tracking changes
Image processing tracking changes

--- a/sample-properties.properties
+++ b/sample-properties.properties
@@ -1,5 +1,24 @@
-TTS_uname = xxxxxx
-TTS_pass = xxxxxx
+#
+#	allowable set of objects to capture images of
+#
+allowable_obj_set=window,bag,person,bottle,room,bed
+
+#
+#	actual number of allowable objects which will be selected randomly from allowable_obj_set for a particular app session
+#	value(possible_number_of_obj) <= size(allowable_obj_set)
+#
+possible_number_of_obj=3
+
+#
+#	time frame(millis) in which Image capturing will be allowed after that only result window will be visible
+#
+time_frame=30000
+
+#
+# Text To Speech configuration
+#
+TTS_uname = xxxx
+TTS_pass = xxxx
 			
 			
 #			/*TTS_name, TTS_gender, TTS_language can be one of the following set
@@ -83,16 +102,15 @@ TTS_name =  en-US_AllisonVoice
 #			/*
 #			 * Speech To Text cred
 #			 */
-STT_uname = xxxxx
-STT_pass = xxxxx
+STT_uname = xxxx
+STT_pass = xxxx
 			
 #			/*
 #			 * Visual Recognition details
 #			 */
-vr_APIKey = xxxxx
+vr_APIKey = xxxx
 tmp_image_dir_path = /tmp/Watson
 vr_classifier_name = testClassifier
-
 #default value will be VisualRecognition.VERSION_DATE_2016_05_20 
 vr_version = 2016-05-20
 
@@ -116,17 +134,17 @@ camera_height = 240
 # Cloudant NOSql cred
 #
 #
-cloudant_uname=xxxxx
-cloudant_pass=xxxxx
+cloudant_uname=xxxx
+cloudant_pass=xxxx
 cloudant_url=https://xxxxxx:xxxx-bluemix.cloudant.com
 cloudant_dbName=scavengerimagesdb
 
 
-#
+# IoT device details
 #
 iot_Organization_ID=xxxx
-iot_device_type=xxxx
-iot_device_id=xxxx
+iot_device_type=myLappy
+iot_device_id=C1MSPPCKH3QF
 iot_Authentication_Token=xxxx
 iot_Authentication_Method=token
 iot_event_for_img_base64=capture_store
