Training app changes to add param configuration

--- a/sample-properties.properties
+++ b/sample-properties.properties
@@ -1,24 +1,34 @@
 #
-#	allowable set of objects to capture images of
+#	allowable set of objects to capture images for Scavenger
 #
 allowable_obj_set=window,bag,person,bottle,room,bed
 
 #
-#	actual number of allowable objects which will be selected randomly from allowable_obj_set for a particular app session
+#	actual number of allowable objects which will be selected randomly from allowable_obj_set for a particular Scavenger app session
 #	value(possible_number_of_obj) <= size(allowable_obj_set)
 #
 possible_number_of_obj=3
 
 #
-#	time frame(millis) in which Image capturing will be allowed after that only result window will be visible
+#	time frame(millis) for Scavenger in which Image capturing will be allowed after that only result window will be visible
 #
 time_frame=30000
 
 #
+#	number of classifier to be created in a single run of Training app
+#
+classifier_count=2
+
+#
+#	number of positive images needed to create each custom classifier.
+#
+number_of_positive_imgs=21
+
+#
 # Text To Speech configuration
 #
-TTS_uname = xxxx
-TTS_pass = xxxx
+TTS_uname = XXXXXXXXX
+TTS_pass = XXXXXXXXX
 			
 			
 #			/*TTS_name, TTS_gender, TTS_language can be one of the following set
@@ -102,13 +112,13 @@ TTS_name =  en-US_AllisonVoice
 #			/*
 #			 * Speech To Text cred
 #			 */
-STT_uname = xxxx
-STT_pass = xxxx
+STT_uname = XXXXXXXXX
+STT_pass = XXXXXXXXX
 			
 #			/*
 #			 * Visual Recognition details
 #			 */
-vr_APIKey = xxxx
+vr_APIKey = XXXXXXXXX
 tmp_image_dir_path = /tmp/Watson
 vr_classifier_name = testClassifier
 #default value will be VisualRecognition.VERSION_DATE_2016_05_20 
@@ -134,17 +144,17 @@ camera_height = 240
 # Cloudant NOSql cred
 #
 #
-cloudant_uname=xxxx
-cloudant_pass=xxxx
-cloudant_url=https://xxxxxx:xxxx-bluemix.cloudant.com
+cloudant_uname=XXXXXXXXX
+cloudant_pass=XXXXXXXXX
+cloudant_url=https://XXXXXXXXX-bluemix.cloudant.com
 cloudant_dbName=scavengerimagesdb
 
 
 # IoT device details
 #
-iot_Organization_ID=xxxx
-iot_device_type=myLappy
-iot_device_id=C1MSPPCKH3QF
-iot_Authentication_Token=xxxx
+iot_Organization_ID=XXXXXXXXX
+iot_device_type=XXXXXXXXX
+iot_device_id=XXXXXXXXX
+iot_Authentication_Token=XXXXXXXXX
 iot_Authentication_Method=token
 iot_event_for_img_base64=capture_store
