Score feature removal changes
Score feature removal changes

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
   
 
-  <name>scavengerHunt</name>
+  <name>WatsonVRTrainingApp</name>
   <url>http://maven.apache.org</url>
 
   <properties>
