--- a/sample-properties.properties
+++ b/sample-properties.properties
@@ -1,15 +1,4 @@
 #
-#	allowable set of objects to capture images for Scavenger
-#
-allowable_obj_set=window,bag,person,bottle,room,bed
-
-#
-#	actual number of allowable objects which will be selected randomly from allowable_obj_set for a particular Scavenger app session
-#	value(possible_number_of_obj) <= size(allowable_obj_set)
-#
-possible_number_of_obj=3
-
-#
 #	time frame(millis) for Scavenger in which Image capturing will be allowed after that only result window will be visible
 #
 time_frame=30000
@@ -17,7 +6,7 @@ time_frame=30000
 #
 #	number of classifier to be created in a single run of Training app
 #
-classifier_count=2
+classifier_count=1
 
 #
 #	number of positive images needed to create each custom classifier.
@@ -27,8 +16,8 @@ number_of_positive_imgs=21
 #
 # Text To Speech configuration
 #
-TTS_uname = XXXXXXXXX
-TTS_pass = XXXXXXXXX
+TTS_uname = XXXXXX
+TTS_pass = XXXXXX
 			
 			
 #			/*TTS_name, TTS_gender, TTS_language can be one of the following set
@@ -112,13 +101,13 @@ TTS_name =  en-US_AllisonVoice
 #			/*
 #			 * Speech To Text cred
 #			 */
-STT_uname = XXXXXXXXX
-STT_pass = XXXXXXXXX
+STT_uname = XXXXXX
+STT_pass = XXXXXX
 			
 #			/*
 #			 * Visual Recognition details
 #			 */
-vr_APIKey = XXXXXXXXX
+vr_APIKey = XXXXXX
 tmp_image_dir_path = /tmp/Watson
 vr_classifier_name = testClassifier
 #default value will be VisualRecognition.VERSION_DATE_2016_05_20 
@@ -144,17 +133,17 @@ camera_height = 240
 # Cloudant NOSql cred
 #
 #
-cloudant_uname=XXXXXXXXX
-cloudant_pass=XXXXXXXXX
-cloudant_url=https://XXXXXXXXX-bluemix.cloudant.com
-cloudant_dbName=scavengerimagesdb
+cloudant_uname=XXXXXX
+cloudant_pass=XXXXXX
+cloudant_url=XXXXXX
+cloudant_dbName=predictionresultdb
 
 
 # IoT device details
 #
-iot_Organization_ID=XXXXXXXXX
-iot_device_type=XXXXXXXXX
-iot_device_id=XXXXXXXXX
-iot_Authentication_Token=XXXXXXXXX
+iot_Organization_ID=XXXXXX
+iot_device_type=MyIoTDevice
+iot_device_id=MyIoTDevice
+iot_Authentication_Token=XXXXXX
 iot_Authentication_Method=token
 iot_event_for_img_base64=capture_store
